# ctrl-plus-fairpetual

./: README.md  package.json  pnpm-lock.yaml
contracts/: .gitignore  Cargo.toml  package.json  postinstall.sh  test-all.sh
contracts/deployments/faker/: alephzero-testnet.ts  development.ts  faker.contract  faker.json  faker.wasm
contracts/deployments/manager/: alephzero-testnet.ts  development.ts  manager.contract  manager.json  manager.wasm
contracts/deployments/market/: alephzero-testnet.ts  development.ts  market.contract  market.json  market.wasm
contracts/deployments/psp22/: psp22.contract  psp22.json  psp22.wasm
contracts/deployments/vault/: alephzero-testnet.ts  development.ts  vault.contract  vault.json  vault.wasm
contracts/deployments/wrapped_azero/: alephzero-testnet.ts  development.ts  wrapped_azero.contract  wrapped_azero.json  wrapped_azero.wasm
contracts/scripts/: deploy.ts
contracts/src/deployer/: Cargo.toml  errors.rs  lib.rs
contracts/src/faker/: Cargo.toml  lib.rs
contracts/src/manager/: Cargo.toml  errors.rs  lib.rs
contracts/src/market/: Cargo.toml  errors.rs  lib.rs  position.rs
contracts/src/oracle-getter/: Cargo.toml  lib.rs
contracts/src/oracle/faker/: Cargo.toml  lib.rs
contracts/src/psp22/: Cargo.toml  lib.rs
contracts/src/vault/: Cargo.toml  errors.rs  lib.rs  traits.rs
contracts/src/wrapped_azero/: Cargo.toml  lib.rs  traits.rs
contracts/src/wrapper/: Cargo.toml  errors.rs  lib.rs  traits.rs
frontend/: next.config.js  package.json
frontend/src/abis/: market.json  psp22.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/components/: chart-info.tsx  contractInteraction.tsx  home-page-title.tsx  navbar.tsx  tradingview-chart.tsx
frontend/src/app/components/position-management/: index.tsx  input-box.tsx
frontend/src/app/components/positions-table/: index.tsx
frontend/src/app/earn/: page.tsx
frontend/src/app/hooks/: useEarn.tsx  useFetchMarkets.tsx  useManagePosition.tsx  useMarkets.tsx  usePositions.tsx  useWalletBalance.tsx
frontend/src/components/ui/: leverageSlider.tsx  separator.tsx  switcher.tsx
frontend/src/components/web3/: connect-button.tsx
frontend/src/deployments/: deployments.ts
frontend/src/utils/: constants.ts  exampleData.ts  formatters.ts  types.ts
